--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -3,7 +3,7 @@
 # available.  Otherwise it will execute while your application is stopped
 # before the deploy step.  This script gets executed directly, so it
 # could be python, php, ruby, etc.
-. ${OPENSHIFT_DATA_DIR}/node/node.sh
+. ${OPENSHIFT_DATA_DIR}/node.sh
 cd ${OPENSHIFT_REPO_DIR}
 npm install
 # To keep node running if crashed
