Support specify node.js script in package.json as in original openshift node app

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
   "devDependencies": {},
   "bundleDependencies": [],
 
-  "private": true
+  "private": true,
+
+  "scripts": {  
+   "start": "node server.js"
+  }
 }
