--- a/config_diy.json
+++ b/config_diy.json
@@ -1,6 +1,8 @@
 {
   "nodejs": {
-    "version": "v0.8.17",
-    "removeOld": false
+    "version": "v0.8.18",
+    "removeOld": false,
+    "storeModulesInData": true,
+    "cleanModulesInData": false
   }
 }
