--- a/config_diy.json
+++ b/config_diy.json
@@ -2,6 +2,7 @@
   "nodejs": {
     "version": "v0.8.18",
     "removeOld": false,
+    "separateErrorLog": true,
     "storeModulesInData": true,
     "cleanModulesInData": false
   }
