--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,36 @@
   </dependencies>
 
   <build>
+     <pluginManagement>
+      <plugins>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence 
+          on the Maven build itself. -->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <versionRange>[1.7,)</versionRange>
+                    <goals>
+                      <goal>run</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute/>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -160,10 +190,64 @@
         </configuration>
       </plugin>
 
+
       <plugin>
-        <groupId>com.google.appengine</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine.target.version}</version>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+            <execution>
+      <phase>generate-sources</phase>
+      <configuration>
+          <target name="building">
+              <echo>
+      <!--  NPM INSTALL  -->
+              </echo>
+              <exec executable="cmd" dir="${project.basedir}"
+              osfamily="windows" failonerror="true">
+                  <arg line="/c npm config set color false"/>
+              </exec>
+              <exec executable="bash" dir="${project.basedir}"
+              osfamily="unix" failonerror="true">
+                  <arg line="npm config set color false"/>
+              </exec>
+              <exec executable="cmd" dir="${project.basedir}"
+              osfamily="windows" failonerror="true">
+                  <arg line="/c npm install"/>
+              </exec>
+              <exec executable="bash" dir="${project.basedir}"
+              osfamily="unix" failonerror="true">
+                  <arg line="npm install"/>
+              </exec>
+              <echo>
+      <!-- Bower  -->
+              </echo>
+              <exec executable="cmd" dir="${project.basedir}"
+              osfamily="windows" resultproperty="cmdresult">
+                  <arg line="/c bower --no-color install"/>
+              </exec>
+              <exec executable="bash" dir="${project.basedir}"
+              osfamily="unix" resultproperty="cmdresult">
+                  <arg line="bower --no-color install"/>
+              </exec>
+              <echo>
+      <!-- GRUNT  -->
+              </echo>
+              <exec executable="cmd" dir="${project.basedir}"
+              osfamily="windows" resultproperty="cmdresult">
+                  <arg line="/c grunt --no-color "/>
+              </exec>
+              <exec executable="bash" dir="${project.basedir}"
+              osfamily="unix" resultproperty="cmdresult">
+                  <arg line="grunt --no-color"/>
+              </exec>
+
+          </target>
+      </configuration>
+                <goals>
+                    <goal>run</goal>
+                </goals>
+            </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
