--- a/config_diy.json
+++ b/config_diy.json
@@ -1,6 +1,13 @@
 {
+  "use_iojs": true,
+  "iojs": {
+    "version": "v1.1.0",
+    "removeOld": true,
+    "separateErrorLog": true,
+    "cleanNPMInstall": false
+  },
   "nodejs": {
-    "version": "v0.10.26",
+    "version": "v0.10.36",
     "removeOld": true,
     "separateErrorLog": true,
     "cleanNPMInstall": false
