--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "url": "https://github.com/squix78/appengine-template.git"
   },
   "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-bower-concat": "^0.2.4",
+    "grunt-bower-install": "^1.4.0",
     "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "livereloadx": "~0.3.3",
-    "grunt": "~0.4.4",
-    "grunt-contrib-less": "^0.11.0",
-    "grunt-bower-concat": "^0.2.4",
-    "grunt-bower-install": "^1.4.0"
+    "main-bower-files": "^2.9.0"
   }
 }
