--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,17 +7,9 @@
 
     <context-param>
       <param-name>org.restlet.application</param-name>
-      <param-value>ch.squix.template.rest.RestApplication</param-value>
+      <param-value>ch.squix.esp8266.fontconverter.rest.RestApplication</param-value>
    </context-param>    
 
-	<filter>
-	        <filter-name>ObjectifyFilter</filter-name>
-	        <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
-	</filter>
-	<filter-mapping>
-	        <filter-name>ObjectifyFilter</filter-name>
-	        <url-pattern>/*</url-pattern>
-	</filter-mapping>
 
    <servlet>
       <servlet-name>RestletServlet</servlet-name>
@@ -25,54 +17,8 @@
          org.restlet.ext.servlet.ServerServlet
       </servlet-class>
    </servlet>
-   
-   <filter>
-	  <filter-name>appstats</filter-name>
-	  <filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
-	  <init-param>
-	    <param-name>logMessage</param-name>
-	    <param-value>Appstats available: /appstats/details?time={ID}</param-value>
-	  </init-param>
-	</filter>
-   
-	<filter>
-	  <filter-name>appstats</filter-name>
-	   <filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
-	</filter>
-	
-	<filter-mapping>
-	  <filter-name>appstats</filter-name>
-	  <url-pattern>/*</url-pattern>
-	</filter-mapping>
-	
-	<filter>
-	  <filter-name>appstats</filter-name>
-	  <filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
-	  <init-param>
-	    <param-name>calculateRpcCosts</param-name>
-	    <param-value>true</param-value>
-	  </init-param>
-	</filter>
 
-	<servlet>
-	  <servlet-name>appstats</servlet-name>
-	  <servlet-class>com.google.appengine.tools.appstats.AppstatsServlet</servlet-class>
-	</servlet>
-	
-	<servlet-mapping>
-	  <servlet-name>appstats</servlet-name>
-	  <url-pattern>/appstats/*</url-pattern>
-	</servlet-mapping>
-	
-	<security-constraint>
-	  <web-resource-collection>
-	    <web-resource-name>appstats</web-resource-name>
-	    <url-pattern>/appstats/*</url-pattern>
-	  </web-resource-collection>
-	  <auth-constraint>
-	    <role-name>admin</role-name>
-	  </auth-constraint>
-	</security-constraint>
+
 
    <servlet-mapping>
       <servlet-name>RestletServlet</servlet-name>
