Added specific script for npm install

--- a/pom.xml
+++ b/pom.xml
@@ -205,10 +205,6 @@
               osfamily="windows" failonerror="true">
                   <arg line="/c npm config set color false"/>
               </exec>
-              <exec executable="npm" dir="${project.basedir}"
-              osfamily="unix" failonerror="true">
-                  <arg line="config set color false"/>
-              </exec>
               <exec executable="cmd" dir="${project.basedir}"
               osfamily="windows" failonerror="true">
                   <arg line="/c npm install"/>
@@ -219,8 +215,8 @@
                   <arg line="npm install"/>
               </exec>
                -->
-              <exec executable="npm" dir="${project.basedir}" failonerror="true">
-			    <arg value="install" />
+              <exec  executable="npmUpdate.sh" dir="${project.basedir}" failonerror="true">
+			    <arg value="" />
 			  </exec>
               <echo>
       <!-- Bower  -->
