fixed script location

--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
                   <arg line="npm install"/>
               </exec>
                -->
-              <exec  executable="npmUpdate.sh" dir="${project.basedir}" failonerror="true">
+              <exec  executable="./npmUpdate.sh" dir="${project.basedir}" failonerror="true">
 			    <arg value="" />
 			  </exec>
               <echo>
