--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-bower-concat": "^0.2.4",
-    "grunt-bower-install": "^1.4.0",
+    "grunt-bower-install": "1.6.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-uglify": "^0.4.0",
