--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "devDependencies": {
     "grunt": "~0.4.4",
-    "grunt-bower-concat": "^0.2.4",
+    "grunt-bower-concat": "0.2.4",
     "grunt-bower-install": "1.6.0",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-less": "^0.11.0",
-    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-less": "0.11.0",
+    "grunt-contrib-uglify": "0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "livereloadx": "~0.3.3",
     "main-bower-files": "^2.9.0"
