--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "grunt-contrib-uglify": "0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "livereloadx": "~0.3.3",
-    "main-bower-files": "^2.9.0"
+    "main-bower-files": "2.9.0"
   }
 }
