--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
     "type": "git",
     "url": "https://gitub.com/openshift/crankcase"
   },
-
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-bower-concat": "0.6.0",
+    "grunt-bower-install": "1.6.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-less": "1.1.0",
+    "grunt-contrib-uglify": "0.11.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "livereloadx": "~0.3.9"
+  },
 
   "engines": {
     "node": ">= 0.6.0",
