--- a/pom.xml
+++ b/pom.xml
@@ -96,10 +96,10 @@
 
     <!-- utils -->
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>14.0.1</version>
-    </dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>19.0</version>
+	</dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -118,6 +118,11 @@
       <version>1.12.6</version>
       <scope>provided</scope>
     </dependency>
+	<dependency>
+	  <groupId>joda-time</groupId>
+	  <artifactId>joda-time</artifactId>
+	  <version>2.9.1</version>
+	</dependency>
 
   </dependencies>
 
