--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,5 +3,6 @@ services:
     message-server:
         container_name: displaytools
         image: squix78/displaytools:latest
+        restart: always
         ports:
             - 80:8080
