--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ch.squix</groupId>
 	<artifactId>esp8266-oled-ssd1306-font-converter</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.4</version>
 	<name>esp8266-oled-ssd1306-font-converter</name>
 	<description>Font Converter</description>
 	<properties>
@@ -19,7 +18,8 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/squix78/esp8266-oled-ssd1306-font-converter</developerConnection>
-	</scm>
+	  <tag>1.0.4</tag>
+  </scm>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
