--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>ch.squix</groupId>
 	<artifactId>esp8266-oled-ssd1306-font-converter</artifactId>
-	<version>1.0.7-SNAPSHOT</version>
+	<version>1.0.7</version>
 	<name>esp8266-oled-ssd1306-font-converter</name>
 	<description>Font Converter</description>
 	<properties>
@@ -18,7 +18,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/squix78/esp8266-oled-ssd1306-font-converter</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>1.0.7</tag>
     </scm>
 	<distributionManagement>
        <repository>
